backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 561616501473.dkr.ecr.ap-south-1.amazonaws.com/airfare-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
