frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 561616501473.dkr.ecr.ap-south-1.amazonaws.com/airfare-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
