backend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app-prod
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  type: ClusterIP
