frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app-prod
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
